Fixed a issue where spinner get squished if the screen size is too small, Improved DetermineIdType

--- a/youtube-metadata-backup-frontend/src/assets/css/main.css
+++ b/youtube-metadata-backup-frontend/src/assets/css/main.css
@@ -80,7 +80,7 @@
 
 
 .mb-a-lot {
-    margin-bottom: 20rem;
+    margin-bottom: 15rem;
 }
 
 .mb-somewhat {
